--- a/css/style.css
+++ b/css/style.css
@@ -2,82 +2,258 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.667);
 }
 
 body {
-    font-family: 'open sans';
+    font-family: 'SF Pro Display', sans-serif;
 }
 
-.contenedor {
-    padding: 20px ;
-    width: 100%;
-    max-width: 1500px;
-    margin: auto;
-    overflow: hidden;
-}
 
-.titulo {
-    color: #642a73;
-    font-size: 40px;
-    text-align: center;
-    margin-bottom: 60px;
-}
+
 
 /* Header */
 
 header {
-    width: 100%;
-    height: 700px;
-    background: #bc4e9c;
- 
-    background: -webkit-linear-gradient(to right, hsla(340, 99%, 37%, 0.29), hsla(317, 48%, 31%, 0.64)), url(../img/iphone4.jpeg);
-   
-    background: linear-gradient(to right, hsla(0, 0%, 0%, 0.755), hsla(317, 45%, 52%, 0.64)), url(../img/iphone4.jpeg);
-  
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
+    width: 98%;
+    height: 200px;
+
+
 }
 
-nav{
+.logo-header {
+    width: 6%;
+
+    align-self: center;
+
+}
+
+.search-icon {
+    width: 35%;
+    margin-right: 65px;
+
+
+
+
+}
+
+.bag-icon {
+    width: 30%;
+
+}
+
+.icons-top {
+
+    display: flex;
+    flex-direction: row;
+    width: 5%;
+    height: auto;
+    margin-right: 120px;
+    justify-content: space-between;
+    ;
+
+
+}
+
+nav {
     text-align: left;
-    padding: 30px 50px 0 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 50px;
+
+
+
 }
 
-nav > a{
-    color:#fff;
+.menu-inicial>a {
+    color: #fff;
     font-weight: 300;
     text-decoration: none;
-    margin-left: 18px;
+
+
 }
 
-nav > a:hover{
+.menu-inicial>a:hover {
     text-decoration: underline;
 }
 
-header .textos-header{
+.menu-inicial {
     display: flex;
-    height: 430px;
-    width: 100%;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.textos-header h1{
-    font-size: 110px;
-    color:#fff;
-}
-
-.textos-header h2{
-    font-size: 30px;
-    font-weight: 300;
-    color:#fff;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 
+/* grid */
+
+.image-grid {
+    --gap: 44px;
+    --num-cols: 4;
+    --row-height: 400px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: 16px;
+    margin-top: 100px;
+    margin-left: 10px;
+
+}
+
+.image-grid-relative {
+    position: relative;
+}
+
+.image-grid-relative>img {
+    width: 100%;
+    height: 100%;
+}
+
+.image-grid-col-2 {
+    grid-column: span 2;
+}
+
+.image-grid-row-2 {
+    grid-row: span 2;
+}
+
+.ipad {
+    color: rgb(0, 0, 0);
+    font-size: 60px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 20%;
+    left: 60%;
+
+}
+
+.mac {
+    color: white;
+    font-size: 60px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+
+.promac {
+    color: white !important;
+    top: 28%;
+    left: 10%;
+    position: absolute;
+    font-weight: 3;
+}
+
+.pro {
+    color: white !important;
+}
+
+.shopBtn {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 150px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 55%;
+    left: 69%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.descriptionIpad {
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute !important;
+    top: 40%;
+    left: 60%;
+
+}
+
+.air {
+    color: rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 10%;
+    left: 13%;
+
+}
+
+.descriptionpods {
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute !important;
+    top: 25%;
+    left: 13%;
+
+}
+
+.podsBtn {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 150px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 41%;
+    left: 24%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.owl-carousel>div {
+    position: relative;
+}
+
+.carouselWatch{
+    margin-top:100px
+}
+
+.btnCarousel {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 150px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 83%;
+    left: 34%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
 
 
+.active.center {
+    transform: scale(1) !important;
+    -webkit-filter: grayscale(0);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(0);
+}
 
-
+.active {
+    transform: scale(.8) !important;
+    transition: .6s ease;
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
