--- a/seccion1/seccion1.css
+++ b/seccion1/seccion1.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: rgb(0, 0, 0);
+}
+
+
+
 .swiper {
     width: 100%;
     height: 100%;
@@ -6,6 +15,7 @@
   .swiper-slide {
     background-position: center;
     background-size: cover;
+    position: relative;
   }
 
   .swiper-slide img {
@@ -17,3 +27,58 @@
 
     opacity: 0 !important;
   } 
+
+  .swiper-slide h1{
+    color:white ;
+    font-size: 120px;
+    font-weight: 30;
+    background-color: transparent !important;
+    position: absolute;
+    top: 22%;
+    left: 20%;
+  }
+  .swiper-slide h2{
+    color:white ;
+    font-size: 97px;
+    font-weight: bold;
+    background-color: transparent !important;
+    position: absolute;
+    top: 36%;
+    left: 20%;
+  }
+
+  .swiper-slide h3{
+    color:white ;
+    font-size: 33px;
+    font-weight: 5;
+    background-color: transparent !important;
+    position: absolute;
+    top: 52%;
+    left: 20%;
+  }
+  .swiper-slide button{
+    color:white ;
+    font-size: 26px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 180px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 61%;
+    left: 20%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
+    border: none;
+  }
+
+  
+
+  .swiper-slide h4{
+    color: #328EFD;
+    font-size: 20px;
+    font-weight: 5px;
+    background-color: transparent !important;
+    position: absolute;
+    top: 63%;
+    left: 37%;
+  }
