--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.667);
-}
 
-body {
-    font-family: 'SF Pro Display', sans-serif;
-}
-
-
-
+body{
+    background-color: black;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
 /* Header */
 
@@ -250,10 +243,82 @@ nav {
     filter: grayscale(0);
 }
 
-.active {
+.owl-item {
     transform: scale(.8) !important;
     transition: .6s ease;
     -webkit-filter: grayscale(100%);
     /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
+}
+
+/*gabi*/
+
+body{
+    background-color: black !important;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.col-6>img{
+    width: 80px;
+    height: 120px;
+}
+
+#fotos{
+    width: 1200px;
+    height: 1200px;
+    display: flex;
+
+}
+
+.row-1{
+    width: 400px;
+    height: 400px;
+}
+
+.col-1{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.p-3{
+    width: 20px;
+    height: 20px;
+}
+
+.row{
+    --bs-gutter-x: 1rem !important;
+}
+
+.m-5{
+margin: 35px 0 0 0 !important;
+}
+.col-lg-4{
+    width: 25% !important;
+}
+
+footer{
+    background-color: aqua;
+    background-image: url("../img/footer.png");
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.galeria{
+    display: flex;
+    flex-direction: row;
+}
+
+.w-100{
+    width: min-content;
+    height: min-content;
+}
+body{
+    background-color: black;
+   
+}
+main {
+    padding: 0 50px;
 }
