--- a/seccion1/seccion1.css
+++ b/seccion1/seccion1.css
@@ -71,3 +71,19 @@
     top: 63%;
     left: 37%;
   }
+
+
+  .swiper-slide button:hover{
+    color:white ;
+    font-size: 26px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 180px;
+    background-color: #6aa9f5;
+    position: absolute;
+    top: 61%;
+    left: 20%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
+    border: none;
+  }
