--- a/css/style.css
+++ b/css/style.css
@@ -316,8 +316,8 @@ body {
 }
 
 .row-1 {
-    width: 400px;
-    height: 400px;
+    width: 100px;
+    height: 100px;
 }
 
 .col-1 {
@@ -335,11 +335,11 @@ body {
 }
 
 .m-5 {
-    margin: 35px 0 0 0 !important;
+    margin: 10px 0 0 0 !important;
 }
 
 .col-lg-4 {
-    width: 25% !important;
+    width: 70% !important;
 }
 
 footer {
@@ -378,7 +378,7 @@ body {
 }
 
 main {
-    padding: 0 50px;
+    padding: 0 20px;
 }
 
 .foot {
@@ -401,3 +401,268 @@ main {
 }
 
 
+@media  screen and (max-width: 400px) {
+
+    header {
+        width: 98%;
+        height: 40px;
+    
+    
+    }
+
+    .search-icon {
+        display: none;
+    
+    
+    
+    
+    }
+
+    .icons-top {
+
+        display: none;
+       
+        ;
+    
+    
+    }
+    
+    .bag-icon {
+        display: none;
+    
+    }
+
+    .menu-inicial {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+.shopBtn {
+    color: white;
+    font-size: 10px;
+    font-weight: 50px;
+    padding: 6px 7px;
+    width: 59px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 72%;
+    left: 59%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.shopBtn:hover {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 20px;
+    background-color: #6aa9f5;
+    position: absolute;
+    top: 55%;
+    left: 69%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.podsBtn {
+    color: white;
+    font-size: 10px;
+    font-weight: 50px;
+    padding: 4px 10px;
+    width: 65px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 77%;
+    left: 9%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.podsBtn:hover {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 50px;
+    background-color: #6aa9f5;
+    position: absolute;
+    top: 41%;
+    left: 24%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+nav {
+    text-align: left;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 20px;
+
+
+
+}
+
+.menu-inicial>a {
+    color: #fff;
+    font-weight: 100;
+    font-size: 12px;
+    text-decoration: none;
+
+
+}
+
+.air {
+    color: rgb(0, 0, 0);
+    font-size: 12px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 10%;
+    left: 13%;
+
+}
+
+.ipad {
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 20%;
+    left: 60%;
+
+}
+
+.descriptionIpad {
+    color: rgb(0, 0, 0);
+    font-size: 11px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute !important;
+    top: 40%;
+    left: 60%;
+
+}
+
+.descriptionpods {
+    color: rgb(0, 0, 0);
+    font-size: 11px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute !important;
+    top: 25%;
+    left: 13%;
+
+}
+
+.mac {
+    color: white;
+    font-size: 20px;
+    font-weight: 100;
+    background-color: transparent !important;
+    position: absolute;
+    top: 18%;
+    left: 10%;
+}
+
+.promac {
+    color: white !important;
+    top: 38%;
+    left: 10%;
+    position: absolute;
+    font-weight: 3;
+    font-size: 12px;
+}
+
+.carouselWatch {
+    margin-top: 50px
+}
+
+
+
+.btnCarousel {
+    color: white;
+    font-size: 10px;
+    font-weight: 50px;
+    padding: 4px 6px;
+    width: 80px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 78%;
+    left: 20%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.btnCarousel:hover {
+    color: white;
+    font-size: 20px;
+    font-weight: 50px;
+    padding: 12px 28px;
+    width: 80px;
+    background-color: #6aa9f5;
+    position: absolute;
+    top: 83%;
+    left: 34%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+.image-grid {
+    --gap: 8px;
+    --num-cols: 4;
+    --row-height: 150px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: 16px;
+    margin-top: 10px;
+    margin-left: 7px;
+
+}
+
+.col-lg-4 {
+    width: 50% !important;
+
+}
+
+#hola {
+    margin: 40px 16px 5px!important;
+}
+
+.modal-dialog{
+    width: 100% !important; 
+    height: 50%;
+    padding: 0 35px;
+
+   
+}
+
+.modal-contend{
+    width: 100%;
+}
+.modal-contend > img{
+    width: 100%;
+}
+
+.foot img {
+    display: flex;
+    align-items: start;
+    height: 30px;
+}
+}
