--- a/seccion1/seccion1.css
+++ b/seccion1/seccion1.css
@@ -87,3 +87,61 @@
     box-shadow: 0 8px 8px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
     border: none;
   }
+
+
+
+  @media  screen and (max-width: 400px) {
+  .swiper-slide h1{
+    color:white ;
+    font-size: 30px;
+    font-weight: 30;
+    background-color: transparent !important;
+    position: absolute;
+    top: 22%;
+    left: 20%;
+  }
+
+  .swiper-slide h2{
+    color:white ;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: transparent !important;
+    position: absolute;
+    top: 36%;
+    left: 20%;
+  }
+
+  .swiper-slide h3{
+    color:white ;
+    font-size: 10px;
+    font-weight: 5;
+    background-color: transparent !important;
+    position: absolute;
+    top: 52%;
+    left: 20%;
+  }
+
+  .swiper-slide button{
+    color:white ;
+    font-size: 10px;
+    font-weight: 50px;
+    padding: 4px 4px;
+    width: 117px;
+    background-color: #328EFD;
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    border-radius: 6px;
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
+    border: none;
+  }
+  .swiper-slide h4{
+    color: #328EFD;
+    font-size: 10px;
+    font-weight: 5px;
+    background-color: transparent !important;
+    position: absolute;
+    top: 71%;
+    left: 21%;
+  }
+}
